# shopping-system-oop

./: .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  ProjectSummary.md  ProjectUML.md  QuickStart.md  README.md  build.ps1  config.yaml  output_all_code.ps1  run.ps1
DevDoc/: ProjectUML.md  SystemFlowDiagram.md  dev_1.md  dev_2.md  dev_3.md  dev_4.md  dev_5.md  dev_6.md  fix_request.md
Include/: Config.h
Include/Interfaces/: DependencyInterfaces.h
Include/ItemManage/: Item.h  ItemManager.h  ItemSearcher.h
Include/Login/: LoginSystem.h
Include/Order/: Order.h  OrderException.h  OrderManager.h
Include/Promotion/: Promotion.h  PromotionManager.h
Include/Services/: CustomerReportService.h
Include/ShoppingCart/: ShoppingCart.h  ShoppingCartManager.h
Include/UserManage/: User.h  UserManager.h
Src/: Config.cpp
Src/ItemManage/: Item.cpp  ItemManager.cpp  ItemSearcher.cpp
Src/Login/: LoginSystem.cpp
Src/Main/: main.cpp
Src/Order/: Order.cpp  OrderManager.cpp
Src/Promotion/: Promotion.cpp  PromotionManager.cpp
Src/Services/: CustomerReportService.cpp
Src/ShoppingCart/: ShoppingCart.cpp  ShoppingCartManager.cpp
Src/UserManage/: User.cpp  UserManager.cpp
res/: config.yaml
res/data/: orders.csv  promotions.csv
